Fix stretched hover previews (#1308)

--- a/app/assets/stylesheets/revised/sections/bike_boxes.scss
+++ b/app/assets/stylesheets/revised/sections/bike_boxes.scss
@@ -54,8 +54,8 @@ $bike-box-bg: $gray-lighter;
 
     img {
       display: block;
-      height: auto;
-      width: 100%;
+      height: 100%;
+      width: auto;
     }
 
     &:hover {
